# mono

./: .env.example  .envrc  .gitignore  .taplo.toml  Cargo.toml  README.md  accreditations.md  deny.toml  flake.nix  fly.toml  justfile  rustc-ice-2024-02-16T17_21_29-27814.txt  rustc-ice-2024-02-16T17_21_29-27815.txt  rustc-ice-2024-02-16T17_21_31-27848.txt  rustc-ice-2024-02-16T17_28_50-28682.txt  rustc-ice-2024-02-16T17_28_50-28683.txt  rustc-ice-2024-02-16T17_28_53-29043.txt  rustc-ice-2024-02-16T17_29_23-29256.txt  rustc-ice-2024-02-16T17_29_23-29257.txt  rustc-ice-2024-02-16T17_29_26-29619.txt  rustc-ice-2024-02-16T17_29_42-29797.txt  rustc-ice-2024-02-16T17_29_42-29798.txt  rustc-ice-2024-02-16T17_29_45-30155.txt  rustfmt.toml
.cargo/: config.toml
.github/workflows/: CD.yaml  CI.yaml  cd.yaml  ci.yaml
crates/: history.txt
crates/app-upload/: Cargo.toml
crates/app-upload/src/: configuring_group.rs  lib.rs  photo.rs  selecting_photos.rs  server_fns.rs  upload_finished.rs
crates/app-upload/src/configuring_group/: group_configurator.rs  next_step_button.rs  uploaded_photo.rs  uploaded_photo_preview.rs
crates/app-upload/src/selecting_photos/: next_step_button.rs  photo_preview.rs  upload_area.rs
crates/artifact/: Cargo.toml
crates/artifact/src/: lib.rs  methods.rs
crates/auth/: Cargo.toml
crates/auth-domain/: Cargo.toml
crates/auth-domain/src/: lib.rs
crates/auth/src/: lib.rs
crates/auth_types/: Cargo.toml
crates/base-components/: Cargo.toml
crates/base-components/src/: image.rs  lib.rs  page_container.rs  photo_group_qr.rs  prose.rs  title.rs  utils.rs
crates/belt/: Cargo.toml
crates/belt/src/: lib.rs
crates/bl/: Cargo.toml
crates/bl/assets/: watermark.xcf
crates/bl/src/: fetch.rs  lib.rs  model.rs  model_ext.rs  qr_code.rs  rmp_sfn.rs  upload.rs
crates/bl/src/upload/: exif_ops.rs  mod.rs  watermark.rs
crates/clients/src/: lib.rs  surreal.rs
crates/core_types/: Cargo.toml
crates/core_types/src/: artifact.rs  auth.rs  conv.rs  lib.rs  meta.rs  photo.rs  price.rs  ssr.rs
crates/engine/: Cargo.toml
crates/imaging/: Cargo.toml
crates/imaging/src/: lib.rs
crates/lsc/: Cargo.toml
crates/lsc/src/: button.rs  colors.rs  field.rs  icons.rs  lib.rs  link.rs
crates/models/: Cargo.toml
crates/models/src/: artifact.rs  image.rs  lib.rs  photo.rs  photo_group.rs  price.rs  state.rs  user.rs
crates/models/src/photo_group/: query.rs
crates/prime-domain/: Cargo.toml
crates/prime-domain/src/: canonical.rs  lib.rs
crates/qr/: Cargo.toml
crates/qr/src/: lib.rs
crates/repos/: Cargo.toml
crates/repos/src/: artifact.rs  base.rs  image.rs  lib.rs  mock.rs  photo.rs  photo_group.rs  user.rs  utils.rs
crates/repos/src/artifact/: canonical.rs
crates/rmp-sfn/: Cargo.toml
crates/rmp-sfn/src/: lib.rs
crates/site-app/: Cargo.toml
crates/site-app/src/: bridge_types.rs  components.rs  error_template.rs  feature_checks.rs  lib.rs  server_fns.rs  utils.rs
crates/site-app/src/components/: form.rs  gallery.rs  header.rs  mod.rs  navigation.rs  page_container.rs  page_cover.rs  photo.rs  photo_deck.rs  photo_group.rs  photo_upload.rs  section.rs  title.rs  user.rs
crates/site-app/src/pages/: history.txt  home_page.rs  login_page.rs  logout_page.rs  mod.rs  not_found_page.rs  photo_group_page.rs  profile_page.rs  protected_page.rs  purchase.rs  qr_code.rs  signup_page.rs  upload_photo_page.rs
crates/site-app/src/pages/auth/: login_page.rs  mod.rs  signup_page.rs
crates/site-app/src/pages/dashboard/: mod.rs
crates/site-app/src/pages/purchase/: error.rs
crates/site-app/src/pages/upload_photo_page/: configuring_group.rs  context.rs  photo.rs  preview.rs  selecting_photos.rs  upload_area.rs  upload_finished.rs
crates/site-app/src/pages/upload_photo_page/configuring_group/: group_configurator.rs  next_step_button.rs  uploaded_photo.rs  uploaded_photo_preview.rs
crates/site-app/src/pages/upload_photo_page/selecting_photos/: next_step_button.rs  photo_preview.rs  upload_area.rs
crates/site-app/src/server_fns/: artifact.rs  image.rs  mod.rs  photo.rs  photo_group.rs  user.rs
crates/site-app/src/server_fns/artifact/: upload_artifact.rs
crates/site-app/src/server_fns/photo/: fetch_photo_thumbnail.rs  ssr.rs
crates/site-app/style/: fonts.css  main.scss  tailwind.config.js
crates/site-app/style/tailwind/: package-lock.json  package.json  tailwind.config.js
crates/site-frontend/: Cargo.toml
crates/site-frontend/src/: lib.rs
crates/site-server/: Cargo.toml
crates/site-server/src/: app_state.rs  file_and_error_handler.rs  fileserv.rs  main.rs
crates/tower-sessions-kv-store/: Cargo.toml
crates/tower-sessions-kv-store/src/: lib.rs
crates/validation/: Cargo.toml
crates/validation/src/: auth.rs  lib.rs
engine/: .env.example  Cargo.toml  flake.nix
engine/crates/auth/: Cargo.toml
engine/crates/auth/src/: lib.rs
engine/crates/clients/: Cargo.toml
engine/crates/clients/src/: surreal.rs
engine/crates/engine/: Cargo.toml
engine/crates/engine/src/: app.rs  main.rs
engine/migrations/migrations/definitions/: _initial.json
flake-modules/devshell/: default.nix
flake-modules/flake-outputs/: default.nix
flake-modules/nixpkgs/: default.nix
flake-modules/rust-builds/: crate-graph.nix  default.nix  leptos.nix  workspace.nix
flake-modules/rust-toolchain/: default.nix
infra/: .terraform.lock.hcl  container-images.tf  main.tf  terraform.tf
migrations/migrations/definitions/: _initial.json
migrations/schemas/: artifact.surrealql  user.surrealql
nix/: cargo-leptos.nix  style-js-deps.nix
