
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
# miette = { version = "7", default-features = false, features = [ "derive" ] }
miette = { git = "https://github.com/zkat/miette", rev = "93d3bd118a072c35aa761f0ec74317166ec08113", default-features = false, features = ["derive"] }
thiserror = "2"

# inherited from rambit
belt =    { git = "https://github.com/rambit-systems/rambit", rev = "6202762" }
db =      { git = "https://github.com/rambit-systems/rambit", rev = "6202762" }
dvf =     { git = "https://github.com/rambit-systems/rambit", rev = "6202762" }
hex =     { git = "https://github.com/rambit-systems/rambit", rev = "6202762" }
kv =      { git = "https://github.com/rambit-systems/rambit", rev = "6202762" }
model =   { git = "https://github.com/rambit-systems/rambit", rev = "6202762" }
storage = { git = "https://github.com/rambit-systems/rambit", rev = "6202762" }

# async
futures = { version = "0.3" }
async-trait = "0.1"
tokio = { version = "1" }

# app-level http
axum = { version = "0.7", features = [ "macros", "tracing" ] }
axum-login = { version = "0.16" }
tower = { version = "0.5", features = [ ] }
tower-http = { version = "0.6", features = [ ] }
tower-sessions = { version = "0.13", default-features = false, features = [ "axum-core" ] }

# leptos
leptos = { version = "0.7.1", features = [ "nightly", "tracing", "islands" ] }
leptos_axum = { version = "0.7.1", features = [ "tracing" ] }
leptos_meta = { version = "0.7.1", features = [ "tracing" ] }
leptos_router = { version = "0.7.1", features = [ "nightly", "tracing" ] }
server_fn = { version = "0.7.1", features = [ "msgpack" ] }
wasm-bindgen = "=0.2.97"
web-sys = { version = "0.3" }
console_error_panic_hook = "0.1"
console_log = "1"

# improve dev compile times
[profile.dev]
opt-level = 0
debug = 1
incremental = true
[profile.dev.package."*"]
opt-level = 3
debug = 2
[profile.dev.build-override]
opt-level = 3

# only for client-side wasm builds
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

# leptos metadata
[[workspace.metadata.leptos]]
name = "site"
hash-files = false

bin-package = "site-server"
lib-package = "site-frontend"

site-root = "target/site"
site-pkg-dir = "pkg"

style-file = "crates/site-app/style/main.scss"
assets-dir = "crates/site-app/public"

site-addr = "0.0.0.0:3000"
reload-port = 3001

browserquery = "defaults"

tailwind-input-file = "crates/site-app/style/main.scss"
tailwind-config-file = "crates/site-app/style/tailwind/tailwind.config.js"

# set by cargo-leptos
watch = false
env = "DEV"

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
lib-profile-release = "wasm-release"

