
[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
# miette = { version = "7", default-features = false, features = [ "derive" ] }
miette = { git = "https://github.com/zkat/miette", rev = "93d3bd118a072c35aa761f0ec74317166ec08113", default-features = false, features = [
  "derive",
] }
thiserror = "2"

# inherited from rambit
belt = { git = "https://github.com/rambit-systems/rambit" }
db = { git = "https://github.com/rambit-systems/rambit" }
dvf = { git = "https://github.com/rambit-systems/rambit" }
hex = { git = "https://github.com/rambit-systems/rambit" }
kv = { git = "https://github.com/rambit-systems/rambit", features = ["redb"] }
model = { git = "https://github.com/rambit-systems/rambit" }
storage = { git = "https://github.com/rambit-systems/rambit" }

# async
async-trait = "0.1"
futures = { version = "0.3" }
tokio = { version = "1", features = ["rt-multi-thread"] }

# app-level http
axum = { version = "0.8", features = ["macros", "tracing"] }
axum-login = { version = "0.17" }
tower = { version = "0.5", features = [] }
tower-http = { version = "0.6", features = [] }
tower-sessions = { version = "0.14", default-features = false, features = ["axum-core"] }

# leptos
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.8.0-rc2", features = ["nightly", "tracing", "islands"] }
leptos_axum = { version = "0.8.0-rc2", features = ["tracing"] }
leptos_meta = { version = "0.8.0-rc2", features = ["tracing"] }
leptos_router = { version = "0.8.0-rc2", features = ["nightly", "tracing"] }
reactive_stores = { version = "0.2.0-rc2" }
send_wrapper = { version = "0.6" }
server_fn = { version = "0.8.0-rc2", features = ["msgpack"] }
wasm-bindgen = "=0.2.100"
web-sys = { version = "0.3" }

# improve dev compile times
[profile.dev]
debug = 1
incremental = true
opt-level = 0
split-debuginfo = "packed"
[profile.dev.package."*"]
debug = 2
opt-level = 3
[profile.dev.build-override]
opt-level = 3

[profile.server-dev]
inherits = "dev"

# only for client-side wasm builds
[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = "thin"
opt-level = 'z'
strip = "debuginfo"

# leptos metadata
[[workspace.metadata.leptos]]
hash-files = false
name = "site"

bin-package = "site-server"
lib-package = "site-frontend"

site-pkg-dir = "pkg"
site-root = "target/site"

assets-dir = "crates/site-app/public"
style-file = "crates/site-app/style/main.scss"

reload-port = 3001
site-addr = "0.0.0.0:3000"

browserquery = "defaults"

tailwind-config-file = "crates/site-app/style/tailwind/tailwind.config.js"
tailwind-input-file = "crates/site-app/style/main.scss"

# set by cargo-leptos
env = "DEV"
watch = false

bin-default-features = false
bin-features = []
bin-profile-dev = "server-dev"
lib-default-features = false
lib-features = []
lib-profile-release = "wasm-release"
