[package]
edition = "2024"
name = "app-upload"
version = "0.1.0"

[dependencies]
base-components = { path = "../base-components" }
lsc = { path = "../lsc" }
models = { path = "../models" }

gloo = { version = "0.11.0", features = ["file", "futures", "net"], default-features = false }
leptos = { workspace = true }
reactive_stores = { workspace = true }
send_wrapper = { workspace = true }
serde.workspace = true
tracing.workspace = true
web-sys = { workspace = true }

prime-domain = { path = "../prime-domain", optional = true }

[lints]
workspace = true

[features]
default = ["single-photo-upload"]
hydrate = ["leptos/hydrate", "base-components/hydrate", "lsc/hydrate"]
ssr = ["leptos/ssr", "base-components/ssr", "lsc/ssr", "dep:prime-domain"]

single-photo-upload = []

[package.metadata.cargo-machete]
# leptos islands need serde as a root dep
ignored = ["serde"]
