[package]
name = "artifact"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object_store = { version = "0.9.0", features = ["aws"] }

bytes.workspace = true
thiserror.workspace = true
serde.workspace = true
color-eyre.workspace = true
surrealdb.workspace = true
ulid.workspace = true
tokio = { workspace = true, features = [ "fs" ] }

core_types = { path = "../core_types", features = [ "ssr" ] }
clients = { path = "../clients" }
