[package]
edition = "2021"
name = "auth-domain"
version = "0.1.0"

[dependencies]
models = { path = "../models", features = ["auth"] }
repos = { path = "../repos" }

hex.workspace = true

tracing.workspace = true

miette.workspace = true
thiserror.workspace = true

async-trait.workspace = true
axum-login.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
