[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
redact = { version = "0.1.8", features = [ "serde" ] }
tower-sessions-surrealdb-store = { version = "0.3" }

axum-login.workspace = true
serde.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
tower-sessions.workspace = true
tokio.workspace = true
tracing.workspace = true
surrealdb.workspace = true

clients = { path = "../clients" }
core_types = { path = "../core_types", features = [ "ssr", "auth" ] }
