[package]
name = "base-components"
version = "0.1.0"
edition = "2024"

[dependencies]
lsc = { path = "../lsc" }
models = { path = "../models" }

leptos = { workspace = true }
web-sys = { workspace = true, features = [ "Window" ] }

[lints]
workspace = true

[features]
default = [ ]
hydrate = [ "leptos/hydrate", "lsc/hydrate" ]
ssr = [ "leptos/ssr", "lsc/ssr" ]
