[package]
edition = "2024"
name = "base-components"
version = "0.1.0"

[dependencies]
models = { path = "../models" }

leptos = { workspace = true }
web-sys = { workspace = true, features = ["Window"] }

[lints]
workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
