[package]
edition = "2024"
name = "base-components"
version = "0.1.0"

[dependencies]
models = { path = "../models" }

const_format.workspace = true
leptos = { workspace = true }
serde.workspace = true
web-sys = { workspace = true, features = ["Window", "HtmlImageElement"] }

[lints]
workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
