[package]
name = "bl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_types = { path = "../core_types", features = [ "ssr" ] }
clients = { path = "../clients" }
artifact = { path = "../artifact" }

bytes.workspace = true
color-eyre.workspace = true
image.workspace = true
thiserror.workspace = true
tracing.workspace = true
surrealdb.workspace = true
serde.workspace = true
ulid.workspace = true

