[package]
name = "bl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_types = { path = "../core_types" }
leptos.workspace = true
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true

clients = { path = "../clients", optional = true }
artifact = { path = "../artifact", optional = true }

base64 = { workspace = true, optional = true }
color-eyre = { workspace = true, optional = true }
image = { workspace = true, optional = true }
qrcode = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }
strum.workspace = true
tokio = { workspace = true, optional = true }

[features]
default = []
hydrate = [ "leptos/hydrate" ]
ssr = [
  "core_types/ssr", "leptos/ssr", "dep:clients", "dep:artifact", "dep:base64",
  "dep:color-eyre", "dep:image", "dep:qrcode", "dep:rayon", "dep:surrealdb",
  "dep:tokio", "dep:tracing",
]
