[package]
name = "core_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
serde.workspace = true
ulid.workspace = true

surreal-id = { version = "0.2", optional = true }

axum-login = { workspace = true, optional = true }
surrealdb = { workspace = true, optional = true }

[features]
default = []
auth = [ "dep:axum-login" ]
ssr = [ "dep:surreal-id", "dep:surrealdb" ]
