[package]
edition = "2021"
name = "prime-domain"
version = "0.1.0"

[dependencies]
models = { path = "../models" }
qr = { path = "../qr" }
repos = { path = "../repos" }

hex.workspace = true

tracing.workspace = true

miette.workspace = true
# thiserror.workspace = true

async-trait.workspace = true

[lints]
workspace = true
