[package]
edition = "2021"
name = "prime-domain"
version = "0.1.0"

[dependencies]
imaging = { path = "../imaging" }
models = { path = "../models" }
qr = { path = "../qr" }
repos = { path = "../repos" }

hex.workspace = true

serde.workspace = true
tracing.workspace = true

miette.workspace = true
thiserror.workspace = true

async-trait.workspace = true
futures.workspace = true
tokio.workspace = true

[lints]
workspace = true
