[package]
edition = "2021"
name = "repos"
version = "0.1.0"

[dependencies]
models = { path = "../models" }

db.workspace = true
hex.workspace = true
storage.workspace = true

tracing.workspace = true

miette.workspace = true
thiserror.workspace = true

async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
