[package]
name = "site-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

app-upload = { path = "../app-upload" }
base-components = { path = "../base-components" }
belt = { workspace = true, optional = true }
lsc = { path = "../lsc" }
models = { path = "../models" }
auth-domain = { path = "../auth-domain", optional = true }
prime-domain = { path = "../prime-domain", optional = true }

axum = { workspace = true, optional = true }
futures.workspace = true
serde.workspace = true
tracing.workspace = true
either = "1.13.0"

[features]
default = [ ]
hydrate = [
  "leptos/hydrate", "app-upload/hydrate", "base-components/hydrate", "lsc/hydrate"
]
ssr = [
  "leptos/ssr", "leptos/tracing", "leptos_meta/ssr", "leptos_router/ssr",
  "app-upload/ssr", "base-components/ssr", "lsc/ssr", "dep:leptos_axum",
  "dep:axum", "dep:belt", "dep:auth-domain", "dep:prime-domain",
]

[lints]
workspace = true

[package.metadata.cargo-machete]
# leptos islands need serde as a root dep
ignored = ["serde"]
