[package]
edition = "2021"
name = "site-frontend"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, features = ["hydrate"] }
site-app = { path = "../site-app", default-features = false, features = ["hydrate"] }

console_error_panic_hook.workspace = true
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen.workspace = true
