[package]
name = "site-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
site-app = { path = "../site-app", default-features = false, features = ["ssr"] }
auth = { path = "../auth" }

leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
leptos_router.workspace = true

axum.workspace = true
color-eyre.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true
