[package]
name = "site-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
site-app = { path = "../site-app", default-features = false, features = ["ssr"] }

prime-domain = { path = "../prime-domain" }
auth-domain = { path = "../auth-domain" }
tower-sessions-kv-store = { path = "../tower-sessions-kv-store" }

leptos = { workspace = true, features = [ "ssr", "tracing" ]}
leptos_axum.workspace = true
# leptos_router.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = [ "fs", "compression-full", "trace" ] }
tower-sessions.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

miette = { workspace = true, features = [ "fancy-no-syscall" ] }
axum-login.workspace = true
