[package]
name = "validation"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true

nutype = { version = "0.4", features = [ "regex", "serde" ] }
regex = { version = "1.10" }
lazy_static = { version = "1.4" }
